--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Nattaphong Wonglakhon"
+title                    : Nattaphong Wonglakhon
 title_separator          : "-"
 name                     : &name "Nattaphong Wonglakhon"
 description              : &description "I'm a PhD student at Centre for Quantum Dynamics, Griffith University, Australia"
