--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : Nattaphong Wonglakhon
+title                    : "Nattaphong Wonglakhon"
 title_separator          : "-"
-name                     : Nattaphong Wonglakhon
+name                     : "Nattaphong Wonglakhon"
 description              : "I'm a PhD student at Centre for Quantum Dynamics, Griffith University, Australia"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
