--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Nattaphong Wonglakhon"
-  avatar           : "profile.jpeg"
+  avatar           : "profile.png"
   bio              : "I'm a PhD student at Centre for Quantum Dynamics, Griffith University, Australia"
   location         : "Brisbane, QlD, Australia"
   employer         :
