--- a/_config.yml
+++ b/_config.yml
@@ -81,13 +81,13 @@ analytics:
 # Site Author
 author:
   name             : "Nattaphong Wonglakhon"
-  avatar           : "profile.png"
+  avatar           : "profile.jepg"
   bio              : "I'm a PhD student at Centre for Quantum Dynamics, Griffith University, Australia"
   location         : "Brisbane, QlD, Australia"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : 
   googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
+  email            :  "nat.wonglakhon"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -96,20 +96,20 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : 
   google_plus      :
   keybase          :
-  instagram        :
+  instagram        :  "sparque_"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : 
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "viexw_"
   vine             :
   weibo            :
   xing             :
