--- a/_config.yml
+++ b/_config.yml
@@ -86,8 +86,8 @@ author:
   location         : "Brisbane, QlD, Australia"
   employer         :
   pubmed           : 
-  googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :  "nat.wonglakhon"
+  googlescholar    : 
+  email            :  "nat.wonglakhon@gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -99,7 +99,7 @@ author:
   github           : 
   google_plus      :
   keybase          :
-  instagram        :  "sparque_"
+  instagram        :  @sparque_
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "viexw_"
+  twitter          : @viexw_
   vine             :
   weibo            :
   xing             :
