--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Nattaphong Wonglakhon"
-  avatar           : "profile.jepg"
+  avatar           : "profile.jpeg"
   bio              : "I'm a PhD student at Centre for Quantum Dynamics, Griffith University, Australia"
   location         : "Brisbane, QlD, Australia"
   employer         :
@@ -99,7 +99,7 @@ author:
   github           : 
   google_plus      :
   keybase          :
-  instagram        :  @sparque_
+  instagram        :  "@sparque_"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : @viexw_
+  twitter          : "@viexw_"
   vine             :
   weibo            :
   xing             :
