--- a/_config.yml
+++ b/_config.yml
@@ -57,9 +57,9 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : "@viexw_"
+  username               : 
 facebook:
-  username               : "Nattaphong Wonglakhon"
+  username               : 
   app_id                 :
   publisher              :
 og_image                 :  # Open Graph/Twitter default site image
