--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Nattaphong Wonglakhon"
   avatar           : "profile.png"
   bio              : "I'm a PhD student at Centre for Quantum Dynamics, Griffith University, Australia"
-  location         : "Brisbane, QlD, Australia"
+  location         : "Brisbane, QLD, Australia"
   employer         :
   pubmed           : 
   googlescholar    : 
