--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Nattaphong Wonglakhon"
 title_separator          : "-"
 name                     : "Nattaphong Wonglakhon"
-description              : "I'm a PhD student at Centre for Quantum Dynamics, Griffith University, Australia"
+description              : "A PhD student at Centre for Quantum Dynamics, Griffith University, Australia"
 url                      : https://sparquee.github.io/nattaphong/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "https://sparquee.github.io/nattaphong/"
