--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Nattaphong Wonglakhon"
 title_separator          : "-"
 name                     : "Nattaphong Wonglakhon"
 description              : "A PhD student at Centre for Quantum Dynamics, Griffith University, Australia"
-url                      : https://sparquee.github.io/nattaphong/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://natwonglakhon.github.io/page/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "https://sparquee.github.io/nattaphong/"
+repository               : "https://natwonglakhon.github.io/page/"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
