--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Nattaphong Wonglakhon"
 title_separator          : "-"
 name                     : "Nattaphong Wonglakhon"
-description              : "A PhD student at Centre for Quantum Dynamics, Griffith University, Australia"
+description              : "PhD student at Centre for Quantum Dynamics, Griffith University, Australia"
 url                      : https://natwonglakhon.github.io/main/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "https://natwonglakhon.github.io/main/"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Nattaphong Wonglakhon"
   avatar           : "profile.png"
-  bio              : "A PhD student at Centre for Quantum Dynamics, Griffith University, Australia"
+  bio              : "PhD student at Centre for Quantum Dynamics, Griffith University, Australia"
   location         : "Brisbane, QLD, Australia"
   employer         :
   pubmed           : 
