--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Nattaphong Wonglakhon"
   avatar           : "profile.png"
-  bio              : "PhD student at Centre for Quantum Dynamics, Griffith University, Australia"
+  bio              : "PhD researcher at Centre for Quantum Dynamics, Griffith University, Australia"
   location         : "Brisbane, QLD, Australia"
   employer         :
   pubmed           : 
